criando o arquivo de deploy do terraform

--- a/kube-news/k8s/deployment.yaml
+++ b/kube-news/k8s/deployment.yaml
@@ -49,7 +49,7 @@ spec:
       labels:
         app: kubenews
     spec:
-      containers:
+    containers:
       - name: kubenews
         image: romulo27/kube-news:v1
         env:
@@ -73,4 +73,4 @@ spec:
   - port: 80
     targerPort: 8080
     nodePort: 30000
-  type: NodePort
+  type: LoadBalancer
